# galactic-router

./: .flake8  Dockerfile  Dockerfile.test  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
alembic/: alembic.ini  env.py
alembic/versions/: 042d8775f6e0_add_created_field_to_registration_table.py  0e50c4ae5859_init.py
config/base/: deployment.yaml
features/: deregister.feature  duplicate.feature  environment.py  move.feature  multiple_networks.feature  multiple_networks_deregister.feature  register-with-vpc-details.feature  register.feature  rejoin.feature
features/steps/: router_steps.py
galactic_router/: __init__.py  bus.py  events.py
galactic_router/proto/: remote_pb2.py
galactic_router/router/: __init__.py  mqtt.py  static.py
src/galactic_router/: __init__.py
