[project]
name = "galactic-router"
version = "0.0.1"
description = "Routing engine for Galactic"

requires-python = ">=3.13"
dependencies = [
    "aiorun>=2025.1.1",
    "click>=8.2.1",
    "bubus>=1.5.5",
    "protobuf>=6.32.0",
    "pydantic>=2.11.7",
    "sqlmodel>=0.0.24",
    "psycopg[binary]>=3.2.10",
    "mysqlclient>=2.2.7",
    "aiomqtt>=2.4.0",
]

[project.optional-dependencies]
test = [
    "behave>=1.3.1",
    "deepdiff>=8.6.0",
    "flake8>=7.3.0",
    "wemake-python-styleguide>=1.4.0",
]

[project.scripts]
galactic-router = "galactic_router:run"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"
